Use relative link in login.html

--- a/app/backend/templates/login.html
+++ b/app/backend/templates/login.html
@@ -16,7 +16,7 @@
       <img src="ui/images/logo.svg" alt="FLECS Logo" class="logo" />
       <h1>Please sign in to continue</h1>
     </div>
-    <form id="loginForm" autocomplete="on" spellcheck="false" action="/login" method="POST"
+    <form id="loginForm" autocomplete="on" spellcheck="false" action="./login" method="POST"
       class="{% if error.is_some() %}has-error{% endif %}">
       <div class="row">
         <label for="username">Username</label>
